# WxTestDialog

./: CMakeLists.txt  GODialog.h  GOSimpleDialog.cpp  GOSimpleDialog.h  GOTabbedDialog.cpp  GOTabbedDialog.h  MySimpleDialog.cpp  MySimpleDialog.h  WxTestApp.cpp  WxTestDialog.cpp  WxTestDialog.hpp  WxTestDialog2.cpp  WxTestDialog2.hpp  WxTestFrame.cpp  WxTestFrame.hpp
build-scripts/for-win64/: build-on-linux.sh
help/: GOHelpRequestor.cpp
nbproject/: configurations.xml  project.xml
